# sacrebleu

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  DATASETS.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  sacreBLEU  sacreBLEU.py  sacrebleu.py  sbleu  setup.cfg  setup.py  test.sh  tox.ini
.github/workflows/: check-build.yml  python-publish.yml
sacrebleu/: __init__.py  color.py  compat.py  dataset.py  rebleu.py  sacrebleu.py  significance.py  tokenizer.py  utils.py
sacrebleu/dataset/: __init__.py  __main__.py  base.py  fake_sgml.py  iwslt_xml.py  plain_text.py  tsv.py  wmt_xml.py
sacrebleu/metrics/: __init__.py  base.py  bleu.py  chrf.py  clseval.py  helpers.py  lib_ter.py  rebleu.py  rebleu2.py  rechrf.py  ter.py
sacrebleu/tokenizers/: __init__.py  tokenizer_13a.py  tokenizer_base.py  tokenizer_char.py  tokenizer_chrf.py  tokenizer_intl.py  tokenizer_ja_mecab.py  tokenizer_ko_mecab.py  tokenizer_none.py  tokenizer_re.py  tokenizer_spm.py  tokenizer_ter.py  tokenizer_th.py  tokenizer_zh.py
scripts/: add_wmt.sh  gen-bleu.py  mteval-v14.pl  perf_test.py
test/: test.py  test_api.py  test_bleu.py  test_chrf.py  test_clseval.py  test_dataset.py  test_sentence_bleu.py  test_significance.py  test_ter.py  test_tokenizer_ter.py  wmt17_en_de_systems.pkl.bz2
