[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sacrebleu"
dynamic = ["version"]
authors = [{ name = "Matt Post", email = "post@cs.jhu.edu" }]
maintainers = [{ name = "Matt Post", email = "post@cs.jhu.edu" }]
description = "Hassle-free computation of shareable, comparable, and reproducible BLEU, chrF, and TER scores"
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",

    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: Apache Software License",

    # List operating systems
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3 :: Only",

    # Indicate that type hints are provided
    "Typing :: Typed",
]

requires-python = ">=3.8"

keywords = [
    "machine translation",
    "evaluation",
    "NLP",
    "natural language processing",
    "computational linguistics",
]

dependencies = [
    "portalocker",
    "regex",
    "tabulate>=0.8.9",
    "numpy>=1.17",
    "colorama",
    "lxml",
]

[project.optional-dependencies]
dev = ["wheel", "pytest", "mypy", "types-tabulate", "lxml-stubs", "setuptools"]
ja = ["mecab-python3>=1.0.9,<2.0.0", "ipadic>=1.0,<2.0"]
ko = ["mecab-ko>=1.0.0,<=1.0.1", "mecab-ko-dic>=1.0,<2.0"]

[project.scripts]
sacrebleu = "sacrebleu.sacrebleu:main"

[project.urls]
Repository = "https://github.com/mjpost/sacrebleu"

[tool.setuptools.packages.find]
include = ["sacrebleu*"]

[tool.setuptools.package-data]
sacrebleu = ["py.typed"]

[tool.setuptools_scm]
version_file = "sacrebleu/version.py"
